--- a/index.html
+++ b/index.html
@@ -223,7 +223,12 @@
 
   
   <img id="back-to-top" src="img/batarang.png" alt="">
+  <p class="card-text">  Fontes: 
+    <a target="_blank" href=" https://www.coxinhanerd.com.br/historia-do-batman/"> https://www.coxinhanerd.com.br/historia-do-batman/</a> </p>
+    
+  <p class="card-text"> <a target="_blank" href="https://segredosdomundo.r7.com/batman-historia/">https://segredosdomundo.r7.com/batman-historia/</a> </p>
 
+ 
 </div>
 </div>
 
